<resources>
    <string name="db_name">tripDB</string>
    <string name="app_name">TripBudget</string>
    <string name="new_trip">Nouveau Voyage</string>
    <string name="trip_destination">Destination</string>
    <string name="trip_start_date">Date de depart</string>
    <string name="trip_finish_date">Date de retour</string>

    <string name="trip_budget">Budget</string>
    <string name="plan_trip">Continuer</string>
    <string name="save_trip">Terminer</string>
    <string name="cancel_trip">Annuler</string>
    <string name="mytrips">Mes Voyages</string>
    <string name="trip_update_title">Modifier le voyage</string>
    <string name="trip_creation_title">Nouveau voyage</string>
    <string name="spent_label">Dépenses:</string>
    <string name="budget_label">Budget:</string>
    <string name="newspent"> Nouvelle Dépense </string>
    <string name="updatespent"> Modifier la dépense </string>
</resources>
