<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:font="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditTripActivity"
    android:background="@drawable/colored_background">

    <TextView
        android:id="@+id/trip_edition_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_trip"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColor="@color/textColorPrimary"
        android:textSize="30sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif"/>

    <TextView
        android:id="@+id/destination_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_destination"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        android:layout_marginTop="100dp"/>

    <AutoCompleteTextView android:id="@+id/trip_destination"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_textedit"
        android:textColor="@android:color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:imeOptions="actionDone"
        android:layout_below="@id/trip_edition_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/date_label_linear"
       android:layout_below="@id/trip_destination"
       android:orientation="horizontal"
       android:layout_marginTop="40dp"
       android:layout_marginBottom="10dp">

    <TextView
        android:id="@+id/start_label"
        android:layout_width="0dp"
        android:layout_weight=".50"
        android:layout_height="wrap_content"
        android:text="@string/trip_start_date"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        android:fontFamily="sans-serif"

        />

    <TextView
        android:id="@+id/finish_label"
        android:layout_width="0dp"
        android:layout_weight=".50"
        android:layout_marginLeft="50dp"
        android:layout_height="wrap_content"
        android:text="@string/trip_finish_date"
        android:textColor="@color/textColorPrimary"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        />


   </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/date_label_linear"
        android:id="@+id/date_linear"
        android:layout_marginBottom="75dp"
        >

    <Button android:id="@+id/trip_start_date"
        android:layout_width="0dp"
        android:layout_weight=".30"
        android:layout_gravity="left"
        android:layout_height="50dp"
        android:textColor="@android:color/white"
        android:backgroundTint="#1A000000"/>



    <Button android:id="@+id/trip_finish_date"
        android:layout_width="0dp"
        android:layout_weight=".30"
        android:layout_height="50dp"
        android:layout_marginLeft="50dp"
        android:textColor="@android:color/white"
        android:backgroundTint="#1A000000"
       />


    </LinearLayout>


    <TextView
        android:id="@+id/budget_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_budget"
        android:textColor="@color/textColorPrimary"
        android:layout_above="@id/trip_budget"
        android:layout_marginBottom="15dp"
        android:textSize="18sp"
        android:fontFamily="sans-serif"
        />


    <EditText android:id="@+id/trip_budget"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/rectangle_textedit"
        android:textColor="@android:color/white"
        android:textCursorDrawable="@drawable/cursor_color"
        android:layout_below="@id/date_linear"
        />

   <!-- <Button
        android:id="@+id/cancel_trip"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/cancel_trip"
        android:onClick="cancelTripEdition"
        />-->

    <Button
        android:id="@+id/save_trip"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/save_trip"
        android:textColor="@color/textColorPrimary"
        android:onClick="saveTrip"
        android:background="@color/savebutton"
        android:layout_below="@id/trip_budget"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        />



</RelativeLayout>
